updated with new variable names

--- a/scripts/get_control_inputs.ipynb
+++ b/scripts/get_control_inputs.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:51.422952Z",
+     "start_time": "2023-07-17T05:41:51.353174Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -14,8 +18,9 @@
     "\n",
     "# import plotting libraries\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams.update({'font.size': 10})\n",
-    "plt.rcParams['svg.fonttype'] = 'none'\n",
+    "\n",
+    "plt.rcParams.update({\"font.size\": 10})\n",
+    "plt.rcParams[\"svg.fonttype\"] = \"none\"\n",
     "\n",
     "# import nctpy functions\n",
     "from nctpy.energies import integrate_u, get_control_inputs\n",
@@ -36,7 +41,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Load A"
+    "### Load adjacency"
    ],
    "metadata": {
     "collapsed": false
@@ -56,19 +61,23 @@
    ],
    "source": [
     "# directory where data is stored\n",
-    "datadir = '/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/nctpy/data'\n",
-    "resultsdir = '/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/nctpy/results'\n",
-    "A_file = 'pnc_schaefer200_Am.npy'\n",
+    "datadir = \"/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/nctpy/data\"\n",
+    "resultsdir = \"/Users/lindenmp/Google-Drive-Rutgers/work/research_projects/nctpy/results\"\n",
+    "adjacency_file = \"pnc_schaefer200_Am.npy\"\n",
     "\n",
-    "# load A matrix\n",
-    "A = np.load(os.path.join(datadir, A_file))\n",
-    "n_nodes = A.shape[0]\n",
-    "print(A.shape)"
+    "# load adjacency matrix\n",
+    "adjacency = np.load(os.path.join(datadir, adjacency_file))\n",
+    "n_nodes = adjacency.shape[0]\n",
+    "print(adjacency.shape)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:51.423871Z",
+     "start_time": "2023-07-17T05:41:51.368982Z"
     }
    }
   },
@@ -87,26 +96,31 @@
    "outputs": [],
    "source": [
     "# load node-to-system mapping\n",
-    "system_labels = list(np.loadtxt(os.path.join(datadir, 'pnc_schaefer200_system_labels.txt'),\n",
-    "                                dtype=str))\n",
+    "system_labels = list(\n",
+    "    np.loadtxt(os.path.join(datadir, \"pnc_schaefer200_system_labels.txt\"), dtype=str)\n",
+    ")\n",
     "\n",
     "# use list of system names to create states\n",
     "states, state_labels = convert_states_str2int(system_labels)\n",
     "\n",
     "# extract initial state\n",
-    "x0 = states == state_labels.index('Vis')\n",
+    "initial_state = states == state_labels.index(\"Vis\")\n",
     "\n",
     "# extract target state\n",
-    "xf = states == state_labels.index('Default')\n",
+    "target_state = states == state_labels.index(\"Default\")\n",
     "\n",
     "# normalize state magnitude\n",
-    "x0 = normalize_state(x0)\n",
-    "xf = normalize_state(xf)"
+    "initial_state = normalize_state(initial_state)\n",
+    "target_state = normalize_state(target_state)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:51.424291Z",
+     "start_time": "2023-07-17T05:41:51.373559Z"
     }
    }
   },
@@ -116,14 +130,12 @@
     "# Get energy\n",
     "\n",
     "By default, we compute $x$ and $u$ using the following settings:\n",
-    "1. Time system: continuous (*system*)\n",
-    "2. Time horizon: 1 (*T*)\n",
-    "3. Control set: uniform full (*B*)\n",
-    "4. Amplitude of $x$ and $u$ are constrained toward zero (*xr*)\n",
-    "5. The constraints on $x$ are equal to the constraints on $u$ (*rho*)\n",
-    "6. The constraints on $x$ are applied to all system nodes (*S*)\n",
-    "\n",
-    "Note, terms in brackets represent the variables that govern each of these settings\n",
+    "1. Time system: continuous\n",
+    "2. Control set: uniform full\n",
+    "3. Time horizon: 1\n",
+    "4. The constraints on $x$ are equal to the constraints on $u$ (*rho*)\n",
+    "5. The constraints on $x$ are applied to all system nodes (*trajectory_constraints*)\n",
+    "6. Amplitude of $x$ and $u$ are constrained toward zero (*reference_state*)\n",
     "\n",
     "You can compute $x$ and $u$ using the above settings like so:"
    ],
@@ -147,25 +159,39 @@
     }
    ],
    "source": [
-    "system = 'continuous'  # choose time system\n",
-    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
-    "B = np.eye(n_nodes)  # uniform full control set\n",
-    "T = 1  # time horizon\n",
-    "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
+    "system = \"continuous\"  # choose time system\n",
+    "adjacency_norm = matrix_normalization(adjacency, system=system, c=1)  # normalize adjacency\n",
+    "control_set = np.eye(n_nodes)  # uniform full control set\n",
+    "time_horizon = 1  # time horizon\n",
     "rho = 1  # x and u constrained equally\n",
-    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "trajectory_constraints = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "reference_state = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
     "\n",
-    "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
-    "node_energy = integrate_u(u)\n",
+    "# get the state trajectory and the control inputs\n",
+    "state_trajectory, control_signals, numerical_error = get_control_inputs(\n",
+    "    A_norm=adjacency_norm,\n",
+    "    T=time_horizon,\n",
+    "    B=control_set,\n",
+    "    x0=initial_state,\n",
+    "    xf=target_state,\n",
+    "    system=system,\n",
+    "    rho=rho,\n",
+    "    S=trajectory_constraints,\n",
+    "    xr=reference_state,\n",
+    ")\n",
+    "node_energy = integrate_u(control_signals)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
-    "print('energy: {0:.2f}'.format(energy))"
+    "print(\"energy: {0:.2f}\".format(energy))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:51.685373Z",
+     "start_time": "2023-07-17T05:41:51.390004Z"
     }
    }
   },
@@ -213,25 +239,39 @@
     }
    ],
    "source": [
-    "system = 'continuous'  # choose time system\n",
-    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
-    "B = np.eye(n_nodes)  # uniform full control set\n",
-    "T = 1  # time horizon\n",
-    "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
+    "system = \"continuous\"  # choose time system\n",
+    "adjacency_norm = matrix_normalization(adjacency, system=system, c=1)  # normalize adjacency\n",
+    "control_set = np.eye(n_nodes)  # uniform full control set\n",
+    "time_horizon = 1  # time horizon\n",
     "rho = 0.5  # x constrained more than u  <-- NOTE CHANGE.\n",
-    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "trajectory_constraints = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "reference_state = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
     "\n",
-    "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
-    "node_energy = integrate_u(u)\n",
+    "# get the state trajectory and the control inputs\n",
+    "state_trajectory, control_signals, numerical_error = get_control_inputs(\n",
+    "    A_norm=adjacency_norm,\n",
+    "    T=time_horizon,\n",
+    "    B=control_set,\n",
+    "    x0=initial_state,\n",
+    "    xf=target_state,\n",
+    "    system=system,\n",
+    "    rho=rho,\n",
+    "    S=trajectory_constraints,\n",
+    "    xr=reference_state,\n",
+    ")\n",
+    "node_energy = integrate_u(control_signals)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
-    "print('energy: {0:.2f}'.format(energy))"
+    "print(\"energy: {0:.2f}\".format(energy))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:51.863534Z",
+     "start_time": "2023-07-17T05:41:51.699866Z"
     }
    }
   },
@@ -248,25 +288,39 @@
     }
    ],
    "source": [
-    "system = 'continuous'  # choose time system\n",
-    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
-    "B = np.eye(n_nodes)  # uniform full control set\n",
-    "T = 1  # time horizon\n",
-    "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
+    "system = \"continuous\"  # choose time system\n",
+    "adjacency_norm = matrix_normalization(adjacency, system=system, c=1)  # normalize adjacency\n",
+    "control_set = np.eye(n_nodes)  # uniform full control set\n",
+    "time_horizon = 1  # time horizon\n",
     "rho = 1.5  # x constrained less than u  <-- NOTE CHANGE.\n",
-    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "trajectory_constraints = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "reference_state = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
     "\n",
-    "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
-    "node_energy = integrate_u(u)\n",
+    "# get the state trajectory and the control inputs\n",
+    "state_trajectory, control_signals, numerical_error = get_control_inputs(\n",
+    "    A_norm=adjacency_norm,\n",
+    "    T=time_horizon,\n",
+    "    B=control_set,\n",
+    "    x0=initial_state,\n",
+    "    xf=target_state,\n",
+    "    system=system,\n",
+    "    rho=rho,\n",
+    "    S=trajectory_constraints,\n",
+    "    xr=reference_state,\n",
+    ")\n",
+    "node_energy = integrate_u(control_signals)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
-    "print('energy: {0:.2f}'.format(energy))"
+    "print(\"energy: {0:.2f}\".format(energy))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:52.016832Z",
+     "start_time": "2023-07-17T05:41:51.917440Z"
     }
    }
   },
@@ -297,25 +351,39 @@
     }
    ],
    "source": [
-    "system = 'continuous'  # choose time system\n",
-    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
-    "B = np.eye(n_nodes)  # uniform full control set\n",
-    "T = 1  # time horizon\n",
-    "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
+    "system = \"continuous\"  # choose time system\n",
+    "adjacency_norm = matrix_normalization(adjacency, system=system, c=1)  # normalize adjacency\n",
+    "control_set = np.eye(n_nodes)  # uniform full control set\n",
+    "time_horizon = 1  # time horizon\n",
     "#  <-- NOTE REMOVAL OF RHO\n",
-    "S = np.zeros((n_nodes, n_nodes))  # x is *not* constrained  <-- NOTE CHANGE\n",
+    "trajectory_constraints = np.zeros((n_nodes, n_nodes))  # x is *not* constrained  <-- NOTE CHANGE\n",
+    "reference_state = np.zeros(n_nodes)  # u constrained toward zero activity\n",
     "\n",
-    "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, S=S)  # <-- NOTE REMOVAL OF RHO\n",
-    "node_energy = integrate_u(u)\n",
+    "# get the state trajectory and the control inputs\n",
+    "state_trajectory, control_signals, numerical_error = get_control_inputs(\n",
+    "    A_norm=adjacency_norm,\n",
+    "    T=time_horizon,\n",
+    "    B=control_set,\n",
+    "    x0=initial_state,\n",
+    "    xf=target_state,\n",
+    "    system=system,\n",
+    "    # <-- NOTE REMOVAL OF RHO\n",
+    "    S=trajectory_constraints,\n",
+    "    xr=reference_state,\n",
+    ")\n",
+    "node_energy = integrate_u(control_signals)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
-    "print('energy: {0:.2f}'.format(energy))"
+    "print(\"energy: {0:.2f}\".format(energy))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:52.183580Z",
+     "start_time": "2023-07-17T05:41:52.021002Z"
     }
    }
   },
@@ -344,25 +412,39 @@
     }
    ],
    "source": [
-    "system = 'continuous'  # choose time system\n",
-    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
-    "B = np.eye(n_nodes)  # uniform full control set\n",
-    "T = 1  # time horizon\n",
-    "xr = xf  # x and u constrained toward target start  <-- NOTE CHANGE\n",
+    "system = \"continuous\"  # choose time system\n",
+    "adjacency_norm = matrix_normalization(adjacency, system=system, c=1)  # normalize adjacency\n",
+    "control_set = np.eye(n_nodes)  # uniform full control set\n",
+    "time_horizon = 1  # time horizon\n",
     "rho = 1  # x and u constrained equally\n",
-    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "trajectory_constraints = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "reference_state = target_state # x and u constrained toward target start  <-- NOTE CHANGE\n",
     "\n",
-    "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
-    "node_energy = integrate_u(u)\n",
+    "# get the state trajectory and the control inputs\n",
+    "state_trajectory, control_signals, numerical_error = get_control_inputs(\n",
+    "    A_norm=adjacency_norm,\n",
+    "    T=time_horizon,\n",
+    "    B=control_set,\n",
+    "    x0=initial_state,\n",
+    "    xf=target_state,\n",
+    "    system=system,\n",
+    "    rho=rho,\n",
+    "    S=trajectory_constraints,\n",
+    "    xr=reference_state,\n",
+    ")\n",
+    "node_energy = integrate_u(control_signals)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
-    "print('energy: {0:.2f}'.format(energy))"
+    "print(\"energy: {0:.2f}\".format(energy))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:52.665578Z",
+     "start_time": "2023-07-17T05:41:52.188335Z"
     }
    }
   },
@@ -372,7 +454,7 @@
     "### You want to use a discrete time system instead?\n",
     "\n",
     "Note, time horizon must be >1 for discrete time systems. In a discrete system, time is broken into\n",
-    "discrete steps of 1, which means T=1 would be only 1 time step."
+    "discrete steps of 1, which means time_horizon=1 would be only 1 time step."
    ],
    "metadata": {
     "collapsed": false
@@ -391,25 +473,39 @@
     }
    ],
    "source": [
-    "system = 'discrete'  # choose time system  <-- NOTE CHANGE\n",
-    "A_norm = matrix_normalization(A, system=system, c=1)  # normalize A\n",
-    "B = np.eye(n_nodes)  # uniform full control set\n",
-    "T = 10  # time horizon  <-- NOTE CHANGE. TIME HORIZON MUST BE >1 FOR DISCRETE TIME SYSTEMS\n",
-    "xr = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
+    "system = \"discrete\"  # choose time system  <-- NOTE CHANGE\n",
+    "adjacency_norm = matrix_normalization(adjacency, system=system, c=1)  # normalize adjacency\n",
+    "control_set = np.eye(n_nodes)  # uniform full control set\n",
+    "time_horizon = 10  # time horizon  <-- NOTE CHANGE. TIME HORIZON MUST BE >1 FOR DISCRETE TIME SYSTEMS\n",
     "rho = 1  # x and u constrained equally\n",
-    "S = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "trajectory_constraints = np.eye(n_nodes)  # x is constrained over all nodes\n",
+    "reference_state = np.zeros(n_nodes)  # x and u constrained toward zero activity\n",
     "\n",
-    "# get the state trajectory (x) and the control inputs (u)\n",
-    "x, u, n_err = get_control_inputs(A_norm=A_norm, T=T, B=B, x0=x0, xf=xf, system=system, xr=xr, rho=rho, S=S)\n",
-    "node_energy = integrate_u(u)\n",
+    "# get the state trajectory and the control inputs\n",
+    "state_trajectory, control_signals, numerical_error = get_control_inputs(\n",
+    "    A_norm=adjacency_norm,\n",
+    "    T=time_horizon,\n",
+    "    B=control_set,\n",
+    "    x0=initial_state,\n",
+    "    xf=target_state,\n",
+    "    system=system,\n",
+    "    rho=rho,\n",
+    "    S=trajectory_constraints,\n",
+    "    xr=reference_state,\n",
+    ")\n",
+    "node_energy = integrate_u(control_signals)\n",
     "energy = np.sum(node_energy)\n",
     "\n",
-    "print('energy: {0:.2f}'.format(energy))"
+    "print(\"energy: {0:.2f}\".format(energy))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    },
+    "ExecuteTime": {
+     "end_time": "2023-07-17T05:41:53.041540Z",
+     "start_time": "2023-07-17T05:41:52.669578Z"
     }
    }
   }
