--- a/scripts/path_a_control_energy_directed.ipynb
+++ b/scripts/path_a_control_energy_directed.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:19.516338Z",
-     "start_time": "2023-07-17T06:05:19.259026Z"
+     "end_time": "2023-07-17T06:22:19.479750Z",
+     "start_time": "2023-07-17T06:22:19.214179Z"
     }
    },
    "outputs": [],
@@ -82,8 +82,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:19.518547Z",
-     "start_time": "2023-07-17T06:05:19.517213Z"
+     "end_time": "2023-07-17T06:22:19.482227Z",
+     "start_time": "2023-07-17T06:22:19.480692Z"
     }
    }
   },
@@ -182,8 +182,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:19.556789Z",
-     "start_time": "2023-07-17T06:05:19.520753Z"
+     "end_time": "2023-07-17T06:22:19.505263Z",
+     "start_time": "2023-07-17T06:22:19.484332Z"
     }
    }
   },
@@ -248,8 +248,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.239533Z",
-     "start_time": "2023-07-17T06:05:19.540748Z"
+     "end_time": "2023-07-17T06:22:20.226879Z",
+     "start_time": "2023-07-17T06:22:19.505371Z"
     }
    }
   },
@@ -273,61 +273,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Region  Class  Isocortex Isocortex_modules  sort_idx    DMN sytem_labels\n",
-      "0      AUDv      0          1          Auditory        16  False     Auditory\n",
-      "1     AUDpo      0          1          Auditory        15  False     Auditory\n",
-      "2      AUDp      0          1          Auditory        14  False     Auditory\n",
-      "3      AUDd      0          1          Auditory        13  False     Auditory\n",
-      "4       ECT     12          1           Lateral        42  False      Lateral\n",
-      "5      PERI     12          1           Lateral        41  False      Lateral\n",
-      "6        GU     12          1           Lateral        11  False      Lateral\n",
-      "7       AId      0          1           Lateral        32  False      Lateral\n",
-      "8      VISC     12          1           Lateral        12  False      Lateral\n",
-      "9       AIv      0          1           Lateral        34  False      Lateral\n",
-      "10      TEa     12          1           Lateral        40  False      Lateral\n",
-      "11      AIp      0          1           Lateral        33  False      Lateral\n",
-      "12   RSPagl      0          1            Medial        35   True          DMN\n",
-      "13     RSPd      0          1            Medial        36   True          DMN\n",
-      "14     RSPv      0          1            Medial        37   True          DMN\n",
-      "15     VISa      0          1            Medial        38   True          DMN\n",
-      "16    VISam      0          1            Medial        18   True          DMN\n",
-      "17    VISpm      0          1            Medial        22  False       Medial\n",
-      "18    ORBvl      0          1               PFC        31   True          DMN\n",
-      "19     ORBm      0          1               PFC        30   True          DMN\n",
-      "20     ACAv      0          1               PFC        26   True          DMN\n",
-      "21     ORBl      0          1               PFC        29   True          DMN\n",
-      "22      ILA     12          1               PFC        28   True          DMN\n",
-      "23       PL     12          1               PFC        27   True          DMN\n",
-      "24     ACAd      0          1               PFC        25   True          DMN\n",
-      "25      FRP     12          1               PFC         0  False          PFC\n",
-      "26    SSp-m      0          1       Somatomotor         6  False  Somatomotor\n",
-      "27      MOp      0          1       Somatomotor         1  False  Somatomotor\n",
-      "28      MOs      0          1       Somatomotor         2   True          DMN\n",
-      "29      SSs      0          1       Somatomotor        10  False  Somatomotor\n",
-      "30   SSp-un      0          1       Somatomotor         9  False  Somatomotor\n",
-      "31   SSp-tr      0          1       Somatomotor         8   True          DMN\n",
-      "32   SSp-ul      0          1       Somatomotor         7  False  Somatomotor\n",
-      "33    SSp-n      0          1       Somatomotor         3  False  Somatomotor\n",
-      "34   SSp-ll      0          1       Somatomotor         5   True          DMN\n",
-      "35  SSp-bfd      0          1       Somatomotor         4  False  Somatomotor\n",
-      "36    VISrl      0          1            Visual        39  False       Visual\n",
-      "37    VISli      0          1            Visual        23  False       Visual\n",
-      "38    VISal      0          1            Visual        17  False       Visual\n",
-      "39     VISl      0          1            Visual        19  False       Visual\n",
-      "40     VISp      0          1            Visual        20  False       Visual\n",
-      "41   VISpor      0          1            Visual        24  False       Visual\n",
-      "42    VISpl      0          1            Visual        21  False       Visual\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_n/09d9v87x2hbf7_lpqf6479zc0000gq/T/ipykernel_36713/4245585106.py:28: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  region_class[\"sytem_labels\"][region_class[\"DMN\"]] = \"DMN\"\n"
+      "     Region  Class  Isocortex Isocortex_modules  sort_idx    DMN system_labels\n",
+      "0      AUDv      0          1          Auditory        16  False      Auditory\n",
+      "1     AUDpo      0          1          Auditory        15  False      Auditory\n",
+      "2      AUDp      0          1          Auditory        14  False      Auditory\n",
+      "3      AUDd      0          1          Auditory        13  False      Auditory\n",
+      "4       ECT     12          1           Lateral        42  False       Lateral\n",
+      "5      PERI     12          1           Lateral        41  False       Lateral\n",
+      "6        GU     12          1           Lateral        11  False       Lateral\n",
+      "7       AId      0          1           Lateral        32  False       Lateral\n",
+      "8      VISC     12          1           Lateral        12  False       Lateral\n",
+      "9       AIv      0          1           Lateral        34  False       Lateral\n",
+      "10      TEa     12          1           Lateral        40  False       Lateral\n",
+      "11      AIp      0          1           Lateral        33  False       Lateral\n",
+      "12   RSPagl      0          1            Medial        35   True           DMN\n",
+      "13     RSPd      0          1            Medial        36   True           DMN\n",
+      "14     RSPv      0          1            Medial        37   True           DMN\n",
+      "15     VISa      0          1            Medial        38   True           DMN\n",
+      "16    VISam      0          1            Medial        18   True           DMN\n",
+      "17    VISpm      0          1            Medial        22  False        Medial\n",
+      "18    ORBvl      0          1               PFC        31   True           DMN\n",
+      "19     ORBm      0          1               PFC        30   True           DMN\n",
+      "20     ACAv      0          1               PFC        26   True           DMN\n",
+      "21     ORBl      0          1               PFC        29   True           DMN\n",
+      "22      ILA     12          1               PFC        28   True           DMN\n",
+      "23       PL     12          1               PFC        27   True           DMN\n",
+      "24     ACAd      0          1               PFC        25   True           DMN\n",
+      "25      FRP     12          1               PFC         0  False           PFC\n",
+      "26    SSp-m      0          1       Somatomotor         6  False   Somatomotor\n",
+      "27      MOp      0          1       Somatomotor         1  False   Somatomotor\n",
+      "28      MOs      0          1       Somatomotor         2   True           DMN\n",
+      "29      SSs      0          1       Somatomotor        10  False   Somatomotor\n",
+      "30   SSp-un      0          1       Somatomotor         9  False   Somatomotor\n",
+      "31   SSp-tr      0          1       Somatomotor         8   True           DMN\n",
+      "32   SSp-ul      0          1       Somatomotor         7  False   Somatomotor\n",
+      "33    SSp-n      0          1       Somatomotor         3  False   Somatomotor\n",
+      "34   SSp-ll      0          1       Somatomotor         5   True           DMN\n",
+      "35  SSp-bfd      0          1       Somatomotor         4  False   Somatomotor\n",
+      "36    VISrl      0          1            Visual        39  False        Visual\n",
+      "37    VISli      0          1            Visual        23  False        Visual\n",
+      "38    VISal      0          1            Visual        17  False        Visual\n",
+      "39     VISl      0          1            Visual        19  False        Visual\n",
+      "40     VISp      0          1            Visual        20  False        Visual\n",
+      "41   VISpor      0          1            Visual        24  False        Visual\n",
+      "42    VISpl      0          1            Visual        21  False        Visual\n"
      ]
     }
    ],
@@ -358,8 +347,8 @@
     "region_class.reset_index(inplace=True, drop=False)\n",
     "\n",
     "# create new system labels column that uses DMN to overwrite existing modules\n",
-    "region_class[\"sytem_labels\"] = region_class[\"Isocortex_modules\"]\n",
-    "region_class[\"sytem_labels\"][region_class[\"DMN\"]] = \"DMN\"\n",
+    "region_class[\"system_labels\"] = region_class[\"Isocortex_modules\"]\n",
+    "region_class.loc[region_class[\"DMN\"], \"system_labels\"] = \"DMN\"\n",
     "\n",
     "print(region_class)"
    ],
@@ -369,8 +358,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.245174Z",
-     "start_time": "2023-07-17T06:05:20.243351Z"
+     "end_time": "2023-07-17T06:22:20.234585Z",
+     "start_time": "2023-07-17T06:22:20.230304Z"
     }
    }
   },
@@ -389,7 +378,7 @@
    "outputs": [],
    "source": [
     "# get system labels\n",
-    "system_labels = list(region_class[\"sytem_labels\"])"
+    "system_labels = list(region_class[\"system_labels\"])"
    ],
    "metadata": {
     "collapsed": false,
@@ -397,8 +386,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.246654Z",
-     "start_time": "2023-07-17T06:05:20.245319Z"
+     "end_time": "2023-07-17T06:22:20.234715Z",
+     "start_time": "2023-07-17T06:22:20.232412Z"
     }
    }
   },
@@ -425,8 +414,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.249149Z",
-     "start_time": "2023-07-17T06:05:20.247442Z"
+     "end_time": "2023-07-17T06:22:20.236457Z",
+     "start_time": "2023-07-17T06:22:20.234985Z"
     }
    }
   },
@@ -444,8 +433,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.250914Z",
-     "start_time": "2023-07-17T06:05:20.249961Z"
+     "end_time": "2023-07-17T06:22:20.239296Z",
+     "start_time": "2023-07-17T06:22:20.236547Z"
     }
    }
   },
@@ -509,8 +498,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.254421Z",
-     "start_time": "2023-07-17T06:05:20.253171Z"
+     "end_time": "2023-07-17T06:22:20.244135Z",
+     "start_time": "2023-07-17T06:22:20.240745Z"
     }
    }
   },
@@ -531,7 +520,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:00<00:00, 23.34it/s]"
+      "100%|██████████| 6/6 [00:00<00:00, 27.66it/s]"
      ]
     },
     {
@@ -571,8 +560,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.541066Z",
-     "start_time": "2023-07-17T06:05:20.256596Z"
+     "end_time": "2023-07-17T06:22:20.476858Z",
+     "start_time": "2023-07-17T06:22:20.243903Z"
     }
    }
   },
@@ -593,7 +582,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:00<00:00, 28.22it/s]"
+      "100%|██████████| 6/6 [00:00<00:00, 26.49it/s]"
      ]
     },
     {
@@ -635,8 +624,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.770413Z",
-     "start_time": "2023-07-17T06:05:20.543217Z"
+     "end_time": "2023-07-17T06:22:20.721383Z",
+     "start_time": "2023-07-17T06:22:20.486923Z"
     }
    }
   },
@@ -675,8 +664,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:20.779938Z",
-     "start_time": "2023-07-17T06:05:20.774956Z"
+     "end_time": "2023-07-17T06:22:20.795728Z",
+     "start_time": "2023-07-17T06:22:20.727590Z"
     }
    }
   },
@@ -842,8 +831,8 @@
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-07-17T06:05:21.510838Z",
-     "start_time": "2023-07-17T06:05:20.786081Z"
+     "end_time": "2023-07-17T06:22:21.521862Z",
+     "start_time": "2023-07-17T06:22:20.774082Z"
     }
    }
   }
